--- a/.github/workflow/unittest.yaml
+++ b/.github/workflow/unittest.yaml
@@ -1,41 +1,53 @@
-name: Python Unit Tests
+name: Unit Tests
 
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Check out code
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v3
-      with:
-        python-version: '3.12.5'  
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.12'  
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        # Add any other dependencies for testing, e.g., pytest or unittest
-        pip install pytest  # Remove if using only unittest
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install -r requirements-dev.txt  # Additional dependencies for development/testing, if any
 
-    - name: Run tests
-      run: |
-        # Run tests with pytest or unittest
-        pytest || python -m unittest discover
+      - name: Run Unit Tests
+        run: |
+          python -m unittest discover -s tests -p "*_test.py"  # Assumes tests are in a "tests" folder with "*_test.py" naming convention
 
-    - name: Archive test results
-      if: always()
-      uses: actions/upload-artifact@v2
-      with:
-        name: test-results
-        path: ./test-reports/  
+      - name: Generate Test Report
+        if: always()
+        run: |
+          mkdir -p test-reports
+          python -m unittest discover -s tests -p "*_test.py" > test-reports/unittest-results.txt
+
+      - name: Upload Test Report
+        uses: actions/upload-artifact@v3
+        with:
+          name: unittest-results
+          path: test-reports/unittest-results.txt
+
+      - name: Publish Test Coverage
+        if: success()
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}  
+          files: ./coverage.xml
+          flags: unittests
+          name: codecov-unittests
